# ccc-reuse-analysis

./: CMakeLists.txt  README.md
cmake/: cuda-coarsening-compiler-config.cmake.in
llvm-rpc-passes/: AssumeRestrictArgs.cpp  AssumeRestrictArgs.h  CMakeLists.txt  CUDACoarsening.cpp  CacheLineReuseAnalysis.cpp  CacheLineReuseAnalysis.h  GridAnalysisPass.h  MemAccessDescriptor.cpp  MemAccessDescriptor.h  Util.cpp  Util.h
maa-pass/: ATNode.cpp  ATNode.fwd.h  ATNode.h  AccessTree.cpp  AccessTree.h  CMakeLists.txt  FunctionStats.cpp  FunctionStats.fwd.h  FunctionStats.h  InstrStats.cpp  InstrStats.fwd.h  InstrStats.h  MemoryAccessAnalysis.cpp  MemoryAccessAnalysis.h  NVPTXUtilities.cpp  Offset.cpp  Offset.h  Operation.cpp  Operation.h  PassStats.cpp  PassStats.h  Stats.cpp  Stats.h  Util.cpp  Util.h
rpc-runtime/: CMakeLists.txt  dynamic.cpp
scripts/: m3c_link.sh
test-kernels/: CMakeLists.txt
test-kernels/benchmarks/hotspot/: CMakeLists.txt  hotspot.cu  run
test-kernels/benchmarks/kmeans/: CMakeLists.txt  cluster.c  kmeans.c  kmeans_clustering.c  kmeans_cuda.cu  kmeans_cuda.cuh  kmeans_cuda_kernel.cu  kmeans_cuda_kernel.cuh
test-kernels/benchmarks/srad/srad_v1/: srad_kernel.cu
test-kernels/copy/: copy.cu
test-kernels/matrix-transpose/: matrix-transpose.cu
test-kernels/microkernels/: CMakeLists.txt  archived.txt  calls_access_pattern.cu  calls_access_pattern.cuh  calls_cases.cu  calls_cases.cuh  calls_coalescing.cu  calls_coalescing.cuh  coal_calls.cu  copy.cu  copy.cuh  kernel_a.cu  kernels.cu  main.cu  microkernels.cu  microkernels.cuh  mk_calls.cu  mk_calls.cuh  test_access_pattern.cu  test_access_pattern.cuh  test_cases.cu  test_cases.cuh  test_coalescing.cu  test_coalescing.cuh  utility.c  utility.cu  utility.cuh  utility.h
test-kernels/reduction/: reduction.cu  utility.h
